# microfluidic-simulator

./: .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  High-Level-Requirements.md  Justfile  Makefile  README.md  STATUS.md  mkdocs.yml
.ai/: README.md
.ai/policies/: developer.md  implementer.md  orchestrator.md  planner.md  qa.md  release.md  reviewer.md
.github/workflows/: ai-dev.yml  ci.yml
api/: Dockerfile  openapi.json  pyproject.toml
api/app/: main.py  schemas.py
api/app/routers/: __init__.py  imports.py  jobs.py  projects.py  sweeps.py
api/tests/: test_health.py  test_jobs.py  test_physics.py
docs/: index.md
frontend/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/.storybook/: main.ts  preview.tsx
frontend/e2e/: smoke.spec.ts
frontend/src/: App.tsx  main.tsx  storage.ts  theme.tsx
frontend/src/api/: client.ts  generated.ts
frontend/src/components/: GeometrySketch.stories.tsx  GeometrySketch.tsx
frontend/src/pages/: Editor.tsx  JobForm.tsx  JobStatus.tsx  Jobs.tsx  Projects.tsx  Sweeps.tsx  VtkViewer.tsx
frontend/src/ui/: SnackbarProvider.tsx
infra/: docker-compose.yml
scripts/: bootstrap.sh  generate_openapi.py  run_agents.sh  run_agents_macos_terminal.sh  run_agents_screen.sh  run_codex_with_policy.sh  tri_agents.py  watch_agents_terminal.py
solver/: core.py  stokes_fem.py  stokes_rect.py
workers/: Dockerfile  tasks.py  worker.py
