[project]
name = "microfluidic-api"
version = "0.0.1"
description = "FastAPI backend for microfluidic simulator"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "python-multipart>=0.0.9",
  "redis>=5.0",
  "rq>=1.16",
  "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "httpx>=0.27",
  "ruff>=0.5",
  "mypy>=1.10",
  "numpy>=1.26",
  "scipy>=1.11",
  "scikit-fem>=8.0",
  "meshio>=5.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
ignore_missing_imports = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["api"]
package-dir = {"api" = "app"}
